# gsm8k-grpo

./: .gitignore  README.md  ablation_report.py  ablation_study.py  email_search.py  email_search_grpo.py  generate_sft_data.py  gsm8k_grpo.py  pyproject.toml  setup.sh
ablation/: README.md  ablation_study.py
runs/ablation/: manifest.json
runs/ablation/baseline/: accuracy_plot.txt  args.json  eval_accuracy_plot.txt  eval_history.json  step_stat_history.json  summary.json
runs/ablation/epsilon_0.1/: accuracy_plot.txt  args.json  eval_accuracy_plot.txt  eval_history.json  step_stat_history.json  summary.json
runs/ablation/epsilon_0.4/: accuracy_plot.txt  args.json  eval_accuracy_plot.txt  eval_history.json  step_stat_history.json  summary.json
runs/ablation/group_size_16/: accuracy_plot.txt  args.json  eval_accuracy_plot.txt  eval_history.json  step_stat_history.json  summary.json
runs/ablation/group_size_4/: accuracy_plot.txt  args.json  eval_accuracy_plot.txt  eval_history.json  step_stat_history.json  summary.json
runs/ablation/lora_rank_128/: accuracy_plot.txt  args.json  eval_accuracy_plot.txt  eval_history.json  step_stat_history.json  summary.json
runs/ablation/lora_rank_16/: accuracy_plot.txt  args.json  eval_accuracy_plot.txt  eval_history.json  step_stat_history.json  summary.json
runs/ablation/lora_rank_64/: accuracy_plot.txt  args.json  eval_accuracy_plot.txt  eval_history.json  step_stat_history.json  summary.json
runs/ablation/lora_rank_8/: accuracy_plot.txt  args.json  eval_accuracy_plot.txt  eval_history.json  step_stat_history.json  (+1 more)
(+68 files in other folders)
